--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
     "@types/web-bluetooth": "^0.0.21",
+    "prettier": "^3.8.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   }
